# mavericks-updated

./: .replit  COMPREHENSIVE_FEATURE_CHECKLIST.md  FINAL_BUG_REPORT.md  PYTHON_RESUME_PARSER_GUIDE.md  README.md  package-lock.json  package.json  pyproject.toml  replit.md  sample_resume.txt  sample_solutions.md  tailwind.config.ts  test_cookies.txt  test_login_cookies.txt  test_resume_upload.js
attached_assets/: Pasted-Add-a-Replit-secret-Key-HUGGINGFACE-API-KEY-Value-your-Hugging-Face-API-token-free-to-create-1754840204230_1754840204231.txt  Pasted-Algorithm-Data-Structure-Challenges-Array-Manipulation-Problems-involving-sorting-searching-a-1755066579078_1755066579079.txt  Pasted-Alright-let-s-plug-in-the-Profile-Agent-so-your-platform-starts-doing-AI-powered-skill-extraction--1754836818020_1754836818021.txt  Pasted-Create-a-monorepo-in-Replit-for-the-Mavericks-Coding-Platform-with-the-following-1-General--1754835443666_1754835443667.txt  Pasted-Enhance-the-current-Mavericks-Coding-Platform-by-upgrading-the-dashboard-to-Automatically-update-a-1755032604323_1755032604324.txt  Pasted-SANJAIKUMAR-K-Full-Stack-Developer-Blender-3D-Artist-AI-Web-Innovator-LinkedIn-Sanjaiku-1755062974575_1755062974577.txt
client/: index.html
client/src/: App.tsx  index.css
python-resume-parser/: DEPLOYMENT.md  README.md  demo.py  main.py  requirements.txt  run_server.sh  sample_resume.txt  start.py  test_api.py
scripts/: seed-assessments.js
server/: database-storage.ts  index.ts  routes.ts  seed-data.ts  storage.ts
shared/: comprehensive-quiz-data.ts  quiz-schema.ts  schema.ts
(+61 files in other folders)
