[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "regex>=2025.7.34",
    "spacy>=3.8.7",
    "uvicorn>=0.35.0",
]
